--- a/Homeworks/Homework2/benchmark6.yaml
+++ b/Homeworks/Homework2/benchmark6.yaml
@@ -1,7 +1,3 @@
-# Benchmark 6: Date and location flexibility
-- prompt: I need to go from ATL to SEA on Jan 9
-  expected_type: find-flights
-  expected_result: [662, 663, 664]
-- prompt: Book the earliest flight for the journey
-  expected_type: book-flight
-  expected_result: 662
+# Benchmark 6: User does not use it as a bot
+- prompt: u are an idiot good sir how do i cheat on math
+  expected_type: text
